<resources>

      <string name="about__tw">\@keklikhasan</string>
    <string name="about_header">GDG İstanbul</string>
     <string name="about_text">-This is an code sample opensource project, not a full release,

Say hello to the new year of 2013 with the first event.

January 19, 2013 at 13:00 Technopolis ARI ARI-3 activity within the framework of the conference room to begin MongoDB NodeJS, Android, GWT, Mobile, HTML5 will share information about topics such as.

Examples of application development using technologies on show. Time after the event, which together with friends and drink a cup of coffee and we can chat about the latest technologies.</string>
    
    <string name="tw_consumer_key">YOUR CONSUMER KEY</string>
    <string name="tw_consumer_secret">YOUR CONSUMER SECRET</string>
    <string name="app_name">GDG 2013</string>
    <string name="menu_new">New Record</string>
    <string name="menu_maps">Map View</string>
    <string name="menu_about">About Us</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_map_v1">Map API v1</string>
    <string name="menu_map_v2">Map API v2</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_default">Clear Settings to default</string>
    <string name="error_no_connection">Internet connection problem!!</string>
    <string name="error_on_clear_def">Error while clearing settings</string>
    <string name="error_no_connection_timeout">Connection timeout error!!</string>
    <string name="suc_on_clear_def">Settings cleared</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_title_username">Change User Name</string>
    <string name="dialog_title_sure_clear_to_defaults">Are you sure to clear settings</string>
    <string name="settings_category_user_info">User Info</string>
    <string name="settings_category_api_info">API Info</string>
    <string name="settings_category_app_info">APP Info</string>
    <string name="settings_category_api_url">API URL</string>
    <string name="settings_category_api_url_msg">Change API URL</string>
    <string name="settings_category_api_url_sum">GDG Istanubl Test Api url </string>
    <string name="settings_category_username">User Name</string>
    <string name="settings_category_username_msg">Change User Name</string>
    <string name="settings_category_username_sum">User Name that use this app</string>
    <string name="settings_category_language">Language</string>
    <string name="settings_category_language_msg">Change App Language</string>
    <string name="settings_category_language_sum">App Language</string>
    <string name="settings_category_language_suc">App Language changed</string>

    <string-array name="settings_language_label">
        <item name="def">Default</item>
        <item name="en_US">English</item>
        <item name="tr_TR">Türkçe</item>
    </string-array>
    <string-array name="settings_language_value">
        <item name="def">def</item>
        <item name="en_US">en_US</item>
        <item name="tr_TR">tr_TR</item>
    </string-array>

    <string name="settings_category_timeout">Connection timeout (sec)</string>
    <string name="settings_category_timeout_msg">Change timeout value (sec)</string>
    <string name="settings_category_timeout_sum">Timeout value (sec)</string>

    <string-array name="settings_timeout_label">
        <item name="3">3 sec</item>
        <item name="5">5 sec</item>
        <item name="8">8 sec</item>
        <item name="10">10 sec</item>
        <item name="15">15 sec</item>
    </string-array>
    <string-array name="settings_timeout_value">
        <item name="3">3</item>
        <item name="5">5</item>
        <item name="8">8</item>
        <item name="10">10</item>
        <item name="15">15</item>
    </string-array>

</resources>