<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="user_info"
        android:title="@string/settings_category_user_info" >
        <EditTextPreference
            android:defaultValue=""
            android:dialogMessage="@string/settings_category_username_msg"
            android:dialogTitle="@string/settings_category_username"
            android:key="com.gdg.istanbul.ocak12.pref.username"
            android:negativeButtonText="@string/dialog_cancel"
            android:positiveButtonText="@string/dialog_ok"
            android:summary="@string/settings_category_username_sum"
            android:title="@string/settings_category_username" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="api_info"
        android:title="@string/settings_category_api_info" >
        <EditTextPreference
            android:defaultValue="http://amazon.minikod.com/"
            android:dialogMessage="@string/settings_category_api_url_msg"
            android:dialogTitle="@string/settings_category_api_url"
            android:key="com.gdg.istanbul.ocak12.pref.api.url"
            android:negativeButtonText="@string/dialog_cancel"
            android:positiveButtonText="@string/dialog_ok"
            android:summary="@string/settings_category_api_url_sum"
            android:title="@string/settings_category_api_url" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="app_info"
        android:title="@string/settings_category_app_info" >
        <ListPreference
            android:defaultValue="def"
            android:entries="@array/settings_language_label"
            android:entryValues="@array/settings_language_value"
            android:key="com.gdg.istanbul.ocak12.pref.app.lang"
            android:negativeButtonText="@string/dialog_cancel"
            android:summary="@string/settings_category_language_sum"
            android:title="@string/settings_category_language_msg" />
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/settings_timeout_label"
            android:entryValues="@array/settings_timeout_value"
            android:key="com.gdg.istanbul.ocak12.pref.app.timeout"
            android:negativeButtonText="@string/dialog_cancel"
            android:summary="@string/settings_category_timeout_sum"
            android:title="@string/settings_category_timeout" />
    </PreferenceCategory>

</PreferenceScreen>