<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/menu_new"
        android:showAsAction="never"
        android:title="@string/menu_new"/>
    
     <item
        android:id="@+id/menu_refresh"
        android:showAsAction="never"
        android:title="@string/menu_refresh"/>
    
    <item
        android:id="@+id/menu_map_v2"
        android:showAsAction="never"
        android:title="@string/menu_map_v2"/>
    
     <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
      <item
        android:id="@+id/menu_about"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
    
    <item
        android:id="@+id/menu_exit"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>
    

</menu>